Prevent table items to break apart from icons in sidebar
The table name was being separated by a line break when the name
was too big.

--- a/src/dashboard/style.scss
+++ b/src/dashboard/style.scss
@@ -48,6 +48,7 @@
 .nav-sidebar > li > a {
     padding-right: 20px;
     padding-left: 20px;
+    word-break: break-all;
 }
 
 .nav-sidebar > li > a > i {
